2007-08-05  Osmo Salomaa  <otsaloma@cc.hut.fi>

	* gaupol/gtk/actions/text.py (CorrectTextsAction):
	Fix label to use title case and add ellipsis.

2007-08-05  Osmo Salomaa  <otsaloma@cc.hut.fi>

	* gaupol/gtk/main.py:
	Bump Python dependency to 2.5.1 (#9685).

2007-08-05  Osmo Salomaa  <otsaloma@cc.hut.fi>

	* data/patterns/Latn-en.hearing-impaired.conf:
	* data/patterns/Latn-en.hearing-impaired.in:
	* data/patterns/Latn.hearing-impaired.conf:
	* data/patterns/Latn.hearing-impaired.in:
	Fix patterns based on crude test case results.

	* gaupol/agents/util.py (get_parser):
	Add redundant_func argument.

	* gaupol/finder.py (set_regex):
	Fix default_flags argument to actually work (again).

	* gaupol/parser.py:
	(_shift_tags): Try to fix when shift is negative.
	(get_text): Remove redundant tags.

	* gaupol/tags/subrip.py (remove_redundant):
	* gaupol/tags/taglib.py (remove_redundant):
	Add method to remove redundant tags.

2007-08-04  Osmo Salomaa  <otsaloma@cc.hut.fi>

	* gaupol/gtk/main.py (_init_application):
	Scroll to jump_row in addition to moving focus.

2007-08-03  Osmo Salomaa  <otsaloma@cc.hut.fi>

	* gaupol/gtk/view.py (_get_renderer):
	Set yalign to 0 for multiline text renderers.

2007-08-03  Osmo Salomaa  <otsaloma@cc.hut.fi>

	* data/glade/text-assistant-progress-page.glade:
	* gaupol/gtk/assistants/text/assistant.py:
	* gaupol/gtk/assistants/text/hearing.py:
	* gaupol/gtk/assistants/text/progress.py:
	Add a progress page before the confirmation page.

2007-08-02  Osmo Salomaa  <otsaloma@cc.hut.fi>

	* gaupol/patternman.py:
	Escape quotation marks in pattern names in conf files.

2007-08-02  Osmo Salomaa  <otsaloma@cc.hut.fi>

	* data/glade/spellcheck-dialog.glade:
	Remove stock buttons to avoid mnemonic conflicts.

2007-08-02  Osmo Salomaa  <otsaloma@cc.hut.fi>

	* data/gaupol.gtk.conf.spec:
	* gaupol/gtk/conf/__init__.py:
	Add hearing impaired page settings.

	* data/glade/text-assistant-confirmation-page.glade: